[gd_scene load_steps=8 format=2]

[ext_resource path="res://PowerUp.gd" type="Script" id=1]
[ext_resource path="res://Titillium-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="PowerUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Labels" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 171.407
margin_top = -162.856
margin_right = 455.407
margin_bottom = 42.1435
size_flags_horizontal = 2
custom_constants/separation = 40

[node name="HP" type="Label" parent="Labels"]
margin_right = 284.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "HP Level: 0"

[node name="Attack" type="Label" parent="Labels"]
margin_top = 80.0
margin_right = 284.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Attack Level: 0"

[node name="Speed" type="Label" parent="Labels"]
margin_top = 160.0
margin_right = 284.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
text = "Speed Level: 0"

[node name="Bottons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -415.0
margin_top = -175.0
margin_right = -207.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 40

[node name="HPBtn" type="Button" parent="Bottons"]
margin_right = 208.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "HP Up"

[node name="AttackBtn" type="Button" parent="Bottons"]
margin_top = 86.0
margin_right = 208.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
text = "Attack Up"

[node name="SpeedBtn" type="Button" parent="Bottons"]
margin_top = 172.0
margin_right = 208.0
margin_bottom = 218.0
custom_fonts/font = SubResource( 3 )
text = "Speed Up"

[node name="BackBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.6396
margin_top = -130.334
margin_right = 68.3604
margin_bottom = -50.3339
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="Souls" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 5 )
visible_characters = 15
text = "Souls: 0"
